# swagger/cloudmesh/profile/profile.yaml
@@ -19,7 +19,67 @@ produces:
 paths: 
   /profiles:
     get: 
+      description: "Returns all general description users "
+      produces: 
+        - "application/json"
+      responses: 
+        "200":
+          description: "profile info"
+          schema: 
+            $ref: "#/definitions/PROFILE" 
+  /profiles/{uuid}:
+    get: 
       description: "Returns a general description of a user "
+      operationId: getProfileByUuid
+      parameters:
+        - name: uuid
+          in: path
+          required: true
+          type: string
+      produces: 
+        - "application/json"
+      responses: 
+        "200":
+          description: "profile info"
+          schema: 
+            $ref: "#/definitions/PROFILE"
+  /addprofiles/{uuid}/{username}/{context}/{description}/{firstname}/{lastname}/{publickey}/{email}:
+    get: 
+      description: "add a general description of a user "
+      operationId: addProfileMongo
+      parameters:
+        - name: uuid
+          in: path
+          required: true
+          type: string
+        - name: username
+          in: path
+          required: true
+          type: string
+        - name: context
+          in: path
+          required: true
+          type: string
+        - name: description
+          in: path
+          required: true
+          type: string
+        - name: firstname
+          in: path
+          required: true
+          type: string
+        - name: lastname
+          in: path
+          required: true
+          type: string
+        - name: publickey
+          in: path
+          required: true
+          type: string
+        - name: email
+          in: path
+          required: true
+          type: string     
       produces: 
         - "application/json"
       responses: 
