# swagger/cloudmesh/profile/server/profile/flaskConnexion/swagger_server/models/profile.py
@@ -1,0 +1,248 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class PROFILE(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, uuid=None, username=None, context=None, description=None, firstname=None, lastname=None, publickey=None, email=None):  # noqa: E501
+        """PROFILE - a model defined in Swagger
+
+        :param uuid: The uuid of this PROFILE.  # noqa: E501
+        :type uuid: str
+        :param username: The username of this PROFILE.  # noqa: E501
+        :type username: str
+        :param context: The context of this PROFILE.  # noqa: E501
+        :type context: str
+        :param description: The description of this PROFILE.  # noqa: E501
+        :type description: str
+        :param firstname: The firstname of this PROFILE.  # noqa: E501
+        :type firstname: str
+        :param lastname: The lastname of this PROFILE.  # noqa: E501
+        :type lastname: str
+        :param publickey: The publickey of this PROFILE.  # noqa: E501
+        :type publickey: str
+        :param email: The email of this PROFILE.  # noqa: E501
+        :type email: str
+        """
+        self.swagger_types = {
+            'uuid': str,
+            'username': str,
+            'context': str,
+            'description': str,
+            'firstname': str,
+            'lastname': str,
+            'publickey': str,
+            'email': str
+        }
+
+        self.attribute_map = {
+            'uuid': 'uuid',
+            'username': 'username',
+            'context': 'context',
+            'description': 'description',
+            'firstname': 'firstname',
+            'lastname': 'lastname',
+            'publickey': 'publickey',
+            'email': 'email'
+        }
+
+        self._uuid = uuid
+        self._username = username
+        self._context = context
+        self._description = description
+        self._firstname = firstname
+        self._lastname = lastname
+        self._publickey = publickey
+        self._email = email
+
+    @classmethod
+    def from_dict(cls, dikt):
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The PROFILE of this PROFILE.  # noqa: E501
+        :rtype: PROFILE
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def uuid(self):
+        """Gets the uuid of this PROFILE.
+
+
+        :return: The uuid of this PROFILE.
+        :rtype: str
+        """
+        return self._uuid
+
+    @uuid.setter
+    def uuid(self, uuid):
+        """Sets the uuid of this PROFILE.
+
+
+        :param uuid: The uuid of this PROFILE.
+        :type uuid: str
+        """
+        if uuid is None:
+            raise ValueError("Invalid value for `uuid`, must not be `None`")  # noqa: E501
+
+        self._uuid = uuid
+
+    @property
+    def username(self):
+        """Gets the username of this PROFILE.
+
+
+        :return: The username of this PROFILE.
+        :rtype: str
+        """
+        return self._username
+
+    @username.setter
+    def username(self, username):
+        """Sets the username of this PROFILE.
+
+
+        :param username: The username of this PROFILE.
+        :type username: str
+        """
+
+        self._username = username
+
+    @property
+    def context(self):
+        """Gets the context of this PROFILE.
+
+
+        :return: The context of this PROFILE.
+        :rtype: str
+        """
+        return self._context
+
+    @context.setter
+    def context(self, context):
+        """Sets the context of this PROFILE.
+
+
+        :param context: The context of this PROFILE.
+        :type context: str
+        """
+
+        self._context = context
+
+    @property
+    def description(self):
+        """Gets the description of this PROFILE.
+
+
+        :return: The description of this PROFILE.
+        :rtype: str
+        """
+        return self._description
+
+    @description.setter
+    def description(self, description):
+        """Sets the description of this PROFILE.
+
+
+        :param description: The description of this PROFILE.
+        :type description: str
+        """
+
+        self._description = description
+
+    @property
+    def firstname(self):
+        """Gets the firstname of this PROFILE.
+
+
+        :return: The firstname of this PROFILE.
+        :rtype: str
+        """
+        return self._firstname
+
+    @firstname.setter
+    def firstname(self, firstname):
+        """Sets the firstname of this PROFILE.
+
+
+        :param firstname: The firstname of this PROFILE.
+        :type firstname: str
+        """
+
+        self._firstname = firstname
+
+    @property
+    def lastname(self):
+        """Gets the lastname of this PROFILE.
+
+
+        :return: The lastname of this PROFILE.
+        :rtype: str
+        """
+        return self._lastname
+
+    @lastname.setter
+    def lastname(self, lastname):
+        """Sets the lastname of this PROFILE.
+
+
+        :param lastname: The lastname of this PROFILE.
+        :type lastname: str
+        """
+
+        self._lastname = lastname
+
+    @property
+    def publickey(self):
+        """Gets the publickey of this PROFILE.
+
+
+        :return: The publickey of this PROFILE.
+        :rtype: str
+        """
+        return self._publickey
+
+    @publickey.setter
+    def publickey(self, publickey):
+        """Sets the publickey of this PROFILE.
+
+
+        :param publickey: The publickey of this PROFILE.
+        :type publickey: str
+        """
+
+        self._publickey = publickey
+
+    @property
+    def email(self):
+        """Gets the email of this PROFILE.
+
+
+        :return: The email of this PROFILE.
+        :rtype: str
+        """
+        return self._email
+
+    @email.setter
+    def email(self, email):
+        """Sets the email of this PROFILE.
+
+
+        :param email: The email of this PROFILE.
+        :type email: str
+        """
+
+        self._email = email
